@startuml

title __COMMAND_HANDLER's Class Diagram__\n

  namespace wasteless.server {
    namespace business {
      namespace command_handler {
        class wasteless.server.business.command_handler.GroceryListCommandHandler {
            + GroceryListCommandHandler()
            + calculateWaste()
            + createGroceryList()
            + deleteGroceryList()
            + generateJsonReport()
            + generateTextReport()
            + updateGroceryList()
        }

        class wasteless.server.business.command_handler.ItemCommandHandler {
                    + ItemCommandHandler()
                    + createItem()
                    + deleteItem()
                    + updateItem()
                }

         class wasteless.server.business.command_handler.UserCommandHandler {
                    + UserCommandHandler()
                    + createUser()
                    + deleteUser()
                    + loginUser()
                    + updateUser()
                }
      }
    }


  }







  wasteless.server.business.command_handler.GroceryListCommandHandler o-- wasteless.server.business.ExportService : exportService
  wasteless.server.business.command_handler.GroceryListCommandHandler o-- wasteless.server.presentation.mapper.GroceryListMapper : groceryListMapper
  wasteless.server.business.command_handler.GroceryListCommandHandler o-- wasteless.server.business.command_service.GroceryListCommandService : groceryListService
  wasteless.server.business.command_handler.GroceryListCommandHandler o-- wasteless.server.business.WasteManagerService : wasteManagerService
  wasteless.server.business.command_handler.ItemCommandHandler o-- wasteless.server.presentation.mapper.ItemMapper : itemMapper
  wasteless.server.business.command_handler.ItemCommandHandler o-- wasteless.server.business.command_service.ItemCommandService : itemService
  wasteless.server.business.command_handler.UserCommandHandler o-- wasteless.server.presentation.mapper.UserMapper : userMapper
  wasteless.server.business.command_handler.UserCommandHandler o-- wasteless.server.business.query_service.UserQueryService : userQueryService
  wasteless.server.business.command_handler.UserCommandHandler o-- wasteless.server.business.command_service.UserCommandService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
